// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Icon snapshots > HeartIcon color="red" label="Heart" matches snapshot 1`] = `
<svg
  aria-label="Heart"
  fill="none"
  height="20"
  role="img"
  stroke="red"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="2"
  viewBox="0 0 24 24"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"
  />
</svg>
`;

exports[`Icon snapshots > HeartIcon default render matches snapshot 1`] = `
<svg
  aria-hidden="true"
  fill="none"
  height="20"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="2"
  viewBox="0 0 24 24"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"
  />
</svg>
`;

exports[`Icon snapshots > HeartIcon size="lg" matches snapshot 1`] = `
<svg
  aria-hidden="true"
  fill="none"
  height="24"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"
  />
</svg>
`;

exports[`Icon snapshots > StarIcon default render matches snapshot 1`] = `
<svg
  aria-hidden="true"
  fill="none"
  height="20"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="2"
  viewBox="0 0 24 24"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <polygon
    points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"
  />
</svg>
`;

exports[`Icon snapshots > StarIcon size="xl" color="gold" matches snapshot 1`] = `
<svg
  aria-hidden="true"
  fill="none"
  height="32"
  stroke="gold"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="2"
  viewBox="0 0 24 24"
  width="32"
  xmlns="http://www.w3.org/2000/svg"
>
  <polygon
    points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"
  />
</svg>
`;
